--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ authors = ["MesaTEE Authors"]
 edition = "2018"
 
 [dependencies]
-
 anyhow               = "1.0.26"
 base64               = "0.10.1"
 bit-vec              = "0.6.1"
@@ -49,14 +48,16 @@ webpki-roots         = "0.19.0"
 yasna                = "0.3.0"
 pem = "0.7.0"
 
-tokio           = "0.2"
-tokio-util      = "0.3"
-futures         = "0.3"
-futures-util    = "0.3.0"
-reqwest         = "0.10"
-http            = "0.2"
+tokio                = "0.2"
+tokio-util           = "0.3"
+tokio-macros         = "0.2"
+mio-uds              = "0.6"
+futures              = "0.3"
+futures-util         = "0.3.0"
+reqwest              = "0.10"
+http                 = "0.2"
 
-rocket           = { git = "https://github.com/SergioBenitez/Rocket", features = ["tls"] }
+rocket               = { git = "https://github.com/SergioBenitez/Rocket", features = ["tls"] }
 
 sgx_cov              = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.1" }
 sgx_tcrypto          = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.1" }
